--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,74 @@ ul {
   column-gap: 1rem;
 }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(21 21 21 / 85%);
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  backdrop-filter: blur(5px);
+  overflow-y: hidden;
+}
+
+.popup-container {
+  position: fixed;
+  border-radius: 15px;
+  left: calc(50% - 250px);
+  height: 85%;
+  margin-top: 60px;
+  padding: 25px;
+  background-color: rgb(235, 235, 235);
+  z-index: 20;
+  overflow-y: auto;
+}
+
+.inner-content,
+.comment-create {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+input[name="username"],
+textarea[name="insights"] {
+  margin-bottom: 20px;
+}
+
+.photo-close img {
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  margin-bottom: 15px;
+}
+
+.fixed-top {
+  z-index: 20;
+  box-shadow: 0 12px 16px 6px rgb(0 0 0 / 5%);
+}
+
+.photo-close span {
+  margin: -20px;
+  position: absolute;
+  right: 30px;
+}
+
+.btn-add-comment {
+  margin: 20px 0;
+  align-self: flex-end;
+}
+
+.btn-com {
+  background-color: blue;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 .film {
   display: flex;
   flex-direction: column;
