--- a/src/style.css
+++ b/src/style.css
@@ -98,8 +98,8 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
-  padding-top: 15rem;
+  margin: 2rem auto;
+  padding-top: 18rem;
 }
 
 .fa-times {
@@ -112,7 +112,7 @@ ul {
   width: 80%;
   display: flex;
   flex-direction: column;
-  margin: 1.5rem auto;
+  margin: 0.5rem auto;
   font-size: 1.15rem;
   line-height: 1.75rem;
 }
@@ -136,6 +136,7 @@ ul {
 }
 
 .comment-create {
+  margin-top: 1rem;
   gap: 0.75rem;
   width: 100%;
   display: flex;
